Fixed wrong spacing in radio and checkbox labels (#612)

--- a/src/alto-ui/Form/CheckBox/CheckBox.scss
+++ b/src/alto-ui/Form/CheckBox/CheckBox.scss
@@ -2,7 +2,7 @@
 
 .CheckBox {
   position: relative;
-  line-height: 1;
+  line-height: 2;
 }
 
 .CheckBox__input {
